--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,10 @@
     "description": "Simple protects from ddos attacks only php. Blocks requests by a list of timeouts. Deny by ipList for ip v4. Deny by userAgentList. It is possible to set a partial match",
     "type": "library",
     "license": "MIT",
+    "keywords": [
+        "php",
+        "ddos defender"
+    ],
     "autoload": {
         "psr-4": {
             "Ilyafreer\\DdosDefender\\": "src/"
