--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "ilyafreer/ddos_defender",
-    "description": "Simple protects from ddos attacks only php. Blocks requests by a list of timeouts. Deny by ipList for ip v4. Deny by userAgentList. It is possible to set a partial match",
+    "name": "ilyafreer/ddos-defender",
+    "description": "PHP DDoS Defender powered by history files",
     "type": "library",
     "license": "MIT",
     "keywords": [
@@ -9,7 +9,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Ilyafreer\\DdosDefender\\": "src/"
+            "Ddos\\": "src/"
         }
     },
     "authors": [
