--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ilyafreer/ddos-defender",
+    "name": "ilyafreer/php-ddos-defender",
     "description": "PHP DDoS Defender powered by history files",
     "type": "library",
     "license": "MIT",
